# CVI

./: .gitignore  .travis.yml  README.md
doc/: Allwmake
doc/doxygen/: Allwmake  Doxyfile
examples/capillary.detailed/example01.detailed/: Run.bat  input.dic
examples/capillary.global/example01/: input.dic
examples/capillary/example01/: input.dic
examples/kinetics/Gas/: POLIMI-BIN1.CKI  POLIMI4BremboComplete.CKI  POLIMI4BremboRevised.CKI  POLIMI4BremboRevised.NoPLOG.CKI  POLIMI4BremboRevised.NoPLOG.DRGEP36.CKI  POLIMI4BremboRevisedComplete.CKI  POLIMI4BremboRevisedComplete.NoPLOG.CKI
examples/kinetics/Mechanisms/Lacroix.corrected-POLIMI4BremboRevised/: input.dic
examples/kinetics/Mechanisms/Lacroix.corrected-PolimiBIN1/: input.dic
examples/kinetics/Mechanisms/Lacroix.corrected.1.6e-9-POLIMI4BremboRevised/: input.dic
examples/kinetics/Mechanisms/Lacroix.corrected.1e-9-POLIMI4BremboRevised/: input.dic
examples/kinetics/Mechanisms/Lacroix.corrected.2000-POLIMI4Brembo/: input.dic
examples/kinetics/Mechanisms/Lacroix.corrected.2000-POLIMI4BremboRevised/: input.dic
examples/kinetics/Mechanisms/Lacroix.corrected.2200-POLIMI4BremboRevised/: input.dic
examples/kinetics/Mechanisms/Lacroix.uncorrected-POLIMI4BremboRevised/: input.dic
examples/kinetics/Mechanisms/Lacroix.uncorrected-PolimiBIN1/: Run.bat  input.dic
examples/kinetics/Mechanisms/Lacroix.uncorrected.2000-POLIMI4BremboRevised/: input.dic
examples/kinetics/Mechanisms/Lacroix.uncorrected.2200-POLIMI4BremboRevised/: input.dic
examples/kinetics/Mechanisms/POLIMI4Brembo/: input.dic
examples/kinetics/Mechanisms/POLIMI4BremboRevised/: input.dic
examples/kinetics/Mechanisms/POLIMI4BremboRevised.NoPLOG/: input.dic
examples/kinetics/Mechanisms/POLIMI4BremboRevisedComplete/: input.dic
examples/kinetics/Mechanisms/POLIMI4BremboRevisedComplete.NoPLOG/: input.dic
examples/kinetics/Surface/: Lacroix.corrected.1.6e-9.CKI  Lacroix.corrected.1e-9.CKI  Lacroix.corrected.2000.CKI  Lacroix.corrected.2000.simplified.CKI  Lacroix.corrected.2200.CKI  Lacroix.corrected.CKI  Lacroix.uncorrected.2000.CKI  Lacroix.uncorrected.2200.CKI  Lacroix.uncorrected.CKI
examples/kinetics/Thermodynamics/: POLIMI_TOT_NOX_1412.CKT
examples/kinetics/Transport/: POLIMI_TOT_NOX_1412.TRC
examples/kinetics/kinetics-Birakayala/: Kinetics_Summary.out  Thermodynamics_Coefficients.out  Thermodynamics_Tables.out  kinetics.CHEMKIN.CKI  kinetics.xml  reaction_names.xml
examples/kinetics/kinetics-Polimi4BremboRevised/: Kinetics_Summary.out  Thermodynamics_Coefficients.out  Thermodynamics_Tables.out  kinetics.CHEMKIN.CKI  kinetics.xml  reaction_names.xml
examples/solver1d.detailed/example01.original/: Run.bat  input.dic
examples/solver1d.detailed/example01.original.1/: input.preprocessor.dic
examples/solver1d.detailed/example01.original.1/Output/: Solution.0.000833333.out  Solution.0.00138889.out  Solution.0.00166667.out  Solution.0.0025.out
examples/solver1d.detailed/example01.original.1/kinetics/: Kinetics_Summary.out  Thermodynamics_Coefficients.out  Thermodynamics_Tables.out  (+1 more)
examples/solver1d.detailed/example01.original.1/kinetics-Lacroix-original/: Run.preprocessor.original.bat  chem.CKI  input.preprocessor.original.dic  surf.inp
examples/solver1d.detailed/example01.profile.cylindrical/: Run.1383K.bat  Run.profile.bat  input.1383K.dic  input.profile.dic
examples/solver1d.detailed/example01.profile.planar/: Run.1383K.bat  Run.profile.bat  input.1383K.dic  input.profile.dic
examples/solver1d.global/example01/: Run.bat  input.dic
examples/solver1d/case01/: input.dic
examples/solver1d/example-1D/: input.dic
examples/solver1d/example01/: Run.bat  input.dic
examples/solver2d.detailed/example01-cylindrical-fromdisk/: input.dic
examples/solver2d.detailed/example01-cylindrical-fromdisk-profile/: input.1383K.dic  input.profile.dic
examples/solver2d.detailed/example01-planar/: input.dic
examples/solver2d.global/example01-cylindrical-fromdisk/: input.dic
examples/solver2d.global/example01-planar/: Run.bat  input.dic
examples/solver2d.global/example02-cylindrical-fromdisk/: Disk.xml  input.dic
examples/solver2d/case01/: input.dic
examples/solver2d/example01/: input.dic
examples/solver2d/example01-cylindrical/: input.dic
examples/solver2d/example01-planar/: input.dic
examples/solver2d/example01-test/: input.dic
matlab/: DiskClass.m  integral2D.m  porousDistribution.m  postprocessor.m
projects/Linux/: Makefile.am  configure.ac  make.compulsory.inc  make.inc  make.optional.inc
projects/Linux/examples/: configure.bovisa-cluster  configure.dell-t7600  configure.desktop-cuoci
projects/Linux/makefiles/: cvi.mk
projects/MSVS2013/: MSVS2013.sln
projects/MSVS2013/Solver1D/: Solver1D.vcxproj  Solver1D.vcxproj.filters
projects/MSVS2017-XE18/Solver1D/: Solver1D.vcxproj
projects/MSVS2019/: MSVS2019.sln
projects/MSVS2019-XE19/: MSVS2019-XE19.sln
projects/MSVS2019-XE19/Solver1D/: Solver1D.vcxproj
projects/MSVS2019/Solver1D/: Solver1D.vcxproj  Solver1D.vcxproj.filters
src/: Capillary.h  Capillary.hpp  DiskFromCFD.h  DiskFromCFD.hpp  Grammar_CVI_HeterogeneousMechanism.h  Grammar_CVI_PlugFlowReactor.h  Grammar_CVI_PlugFlowReactorCoupled.h  Grammar_CVI_PorosityDefect.h  Grammar_CVI_PorousMedium.h  Grammar_CVI_Solver.h  Grammar_CVI_Solver1D.h  HeterogeneousDetailedMechanism.h  HeterogeneousDetailedMechanism.hpp  HeterogeneousMechanism.h  HeterogeneousMechanism.hpp  Interface_Capillary_OpenSMOKEppDae.h  Interface_OpenSMOKEppDae.h  Interface_PlugFlowReactorCoupled_ODE.h  Interface_PlugFlowReactor_ODE.h  Interface_Reactor1D_BzzDae.h  Interface_Reactor2D_BzzDae.h  Interface_Reactor2D_Daspk.h  Interface_Reactor2D_Ida.h  Interface_Reactor2D_OpenSMOKEppDae.h  PlugFlowReactor.h  PlugFlowReactor.hpp  PlugFlowReactorCoupled.h  PlugFlowReactorCoupled.hpp  PlugFlowReactorCoupledProfiles.h  PlugFlowReactorCoupledProfiles.hpp  PlugFlowReactorProfiles.h  PlugFlowReactorProfiles.hpp  PorosityDefect.h  PorosityDefect.hpp  PorousMedium.h  PorousMedium.hpp  Reactor1D.h  Reactor1D.hpp  Reactor2D.h  Reactor2D.hpp  (+5 more)
(+79 files in other folders)
