AUTOMAKE_OPTIONS = foreign

if INTEL_COMPILER
AM_CXXFLAGS = -O3 -m64 -fPIC -std=c++11 @OPENMP_INTEL@
else
AM_CXXFLAGS = -O3 -m64 -fPIC -std=c++0x @OPENMP_GNU@
endif

AM_CPPFLAGS = @USE_MKL@ @USE_BZZMATH@ @USE_DASPK@ @USE_RADAU@ @USE_MEBDF@ @USE_ODEPACK@ @USE_UMFPACK@ @USE_SUPERLU@ @USE_SUNDIALS@ \
              @OPENSMOKEPP_INCLUDE_DIR@ @EIGEN_INCLUDE_DIR@ @RAPIDXML_INCLUDE_DIR@ @BOOST_INCLUDE_DIR@ \
              @MKL_INCLUDE_DIR@ @BZZMATH_INCLUDE_DIR@ @UMFPACK_INCLUDE_DIR@ @SUPERLU_INCLUDE_DIR@ @SUNDIALS_INCLUDE_DIR@

AM_LDFLAGS  = @BOOST_LIBS@ @MKL_LIBS@ @UMFPACK_LIBS@ @SUNDIALS_LIBS@

bin_PROGRAMS = CVI
CVI_SOURCES = ../../src/solver1d.cpp
CVI_LDADD =  @BZZMATH_LIBS@ @DASPK_LIBS@ @RADAU_LIBS@ @MEBDF_LIBS@ @ODEPACK_LIBS@ @SUPERLU_LIBS@

