AUTOMAKE_OPTIONS = foreign

if INTEL_COMPILER
AM_CXXFLAGS = -O3 -m64 -fPIC -std=c++11 @OPENMP_INTEL@
else
AM_CXXFLAGS = -O3 -m64 -fPIC -std=c++11 @OPENMP_GNU@
endif

AM_CPPFLAGS = @USE_MKL@ @USE_EXTERNAL_LIBRARIES@ \
	      @COMPULSORY_INCLUDE_DIRS@ @EXTERNAL_INCLUDE_DIRS@ @MKL_INCLUDE_DIR@

AM_LDFLAGS  = @BOOST_LIBS@ @MKL_LIBS@ -lgfortran

#Main program
bin_PROGRAMS = OpenSMOKEpp_CVI.sh
OpenSMOKEpp_CVI_sh_SOURCES = ../../src/solver.cpp
OpenSMOKEpp_CVI_sh_LDADD =  @EXTERNAL_LIBS@



